增加用户退出接口，定期清理过期的token
