# controllers/user.go
@@ -5,6 +5,7 @@ import (
 	"strconv"
 
 	"eme/models"
+	"eme/pkg/code"
 
 	"github.com/gin-gonic/gin"
 )
@@ -13,6 +14,7 @@ import (
 // @Summary 获取单个用户
 // @Tags user
 // @Accept  json
+// @Security ApiKeyAuth
 // @Param id path int true "user id"
 // @Success 200 {object} controllers.Response
 // @Router /user/{id} [get]
@@ -20,24 +22,24 @@ func UserGetByID(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
 		c.JSON(http.StatusOK, Response{
-			Code: InvalidParams,
-			Msg:  GetMsg(InvalidParams) + err.Error(),
+			Code: code.InvalidParams,
+			Msg:  code.GetMsg(code.InvalidParams) + err.Error(),
 			Data: nil,
 		})
 		return
 	}
-	user, err := models.UserGetByID(id)
+	ecode, user, err := models.UserGetByID(id)
 	if err != nil {
 		c.JSON(http.StatusOK, Response{
-			Code: Error,
-			Msg:  GetMsg(Error) + err.Error(),
+			Code: ecode,
+			Msg:  code.GetMsg(ecode) + err.Error(),
 			Data: nil,
 		})
 		return
 	}
 	c.JSON(http.StatusOK, Response{
-		Code: Success,
-		Msg:  GetMsg(Success),
+		Code: ecode,
+		Msg:  code.GetMsg(ecode),
 		Data: user,
 	})
 
@@ -47,6 +49,7 @@ func UserGetByID(c *gin.Context) {
 // @Summary 获取用户
 // @Tags user
 // @Accept  json
+// @Security ApiKeyAuth
 // @Param nowPage query int false "now page"
 // @Param pageSize query int false "page size"
 // @Success 200 {object} controllers.Response
@@ -56,8 +59,8 @@ func UserGet(c *gin.Context) {
 	pageSize, err := strconv.Atoi(c.DefaultQuery("pageSize", "3"))
 	if err != nil {
 		c.JSON(http.StatusOK, Response{
-			Code: InvalidParams,
-			Msg:  GetMsg(InvalidParams) + err.Error(),
+			Code: code.InvalidParams,
+			Msg:  code.GetMsg(code.InvalidParams) + err.Error(),
 			Data: nil,
 		})
 		return
@@ -68,18 +71,18 @@ func UserGet(c *gin.Context) {
 	if pageSize <= 0 {
 		pageSize = 3
 	}
-	count, users, err := models.UserGet(nowPage, pageSize)
+	ecode, count, users, err := models.UserGet(nowPage, pageSize)
 	if err != nil {
 		c.JSON(http.StatusOK, Response{
-			Code: Error,
-			Msg:  GetMsg(Error) + err.Error(),
+			Code: ecode,
+			Msg:  code.GetMsg(ecode) + err.Error(),
 			Data: nil,
 		})
 		return
 	}
 	c.JSON(http.StatusOK, Response{
-		Code: Success,
-		Msg:  GetMsg(Success),
+		Code: ecode,
+		Msg:  code.GetMsg(ecode),
 		Data: map[string]interface{}{
 			"users": users,
 			"total": count,
@@ -88,10 +91,65 @@ func UserGet(c *gin.Context) {
 
 }
 
+// UserLogout user logout
+// @Summary 用户退出，销毁token
+// @Tags user
+// @Accept x-www-form-urlencoded
+// @Security ApiKeyAuth
+// @Success 200 {object} controllers.Response
+// @Router /user/logout [post]
+func UserLogout(c *gin.Context) {
+	token := c.GetHeader("Authorization")
+	ecode := models.UserLogout(token)
+	c.JSON(http.StatusOK, Response{
+		Code: ecode,
+		Msg:  code.GetMsg(ecode),
+		Data: nil,
+	})
+
+}
+
+// UserLogin user login
+// @Summary 用户登录
+// @Tags user
+// @Accept x-www-form-urlencoded
+// @Param Username formData string ture "user name"
+// @Param Password formData string ture "user password"
+// @Success 200 {object} controllers.Response
+// @Router /user/login [post]
+func UserLogin(c *gin.Context) {
+	Username := c.PostForm("Username")
+	Password := c.PostForm("Password")
+	if Username == "" || Password == "" {
+		c.JSON(http.StatusOK, Response{
+			Code: code.InvalidParams,
+			Msg:  code.GetMsg(code.InvalidParams),
+			Data: nil,
+		})
+		return
+	}
+	ecode, data, err := models.UserLogin(Username, Password)
+	if err != nil {
+		c.JSON(http.StatusOK, Response{
+			Code: ecode,
+			Msg:  code.GetMsg(ecode) + err.Error(),
+			Data: nil,
+		})
+		return
+	}
+	c.JSON(http.StatusOK, Response{
+		Code: ecode,
+		Msg:  code.GetMsg(ecode),
+		Data: data,
+	})
+
+}
+
 // UserDeleteByID user delete by id
 // @Summary 删除单个用户
 // @Tags user
 // @Accept  json
+// @Security ApiKeyAuth
 // @Param id path int true "user id"
 // @Success 200 {object} controllers.Response
 // @Router /user/{id} [delete]
@@ -99,24 +157,24 @@ func UserDeleteByID(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
 		c.JSON(http.StatusOK, Response{
-			Code: InvalidParams,
-			Msg:  GetMsg(InvalidParams) + err.Error(),
+			Code: code.InvalidParams,
+			Msg:  code.GetMsg(code.InvalidParams) + err.Error(),
 			Data: nil,
 		})
 		return
 	}
-	num, err := models.UserDelByID(int64(id))
+	ecode, num, err := models.UserDelByID(int64(id))
 	if err != nil {
 		c.JSON(http.StatusOK, Response{
-			Code: Error,
-			Msg:  GetMsg(Error) + err.Error(),
+			Code: ecode,
+			Msg:  code.GetMsg(ecode) + err.Error(),
 			Data: nil,
 		})
 		return
 	}
 	c.JSON(http.StatusOK, Response{
-		Code: Success,
-		Msg:  GetMsg(Success),
+		Code: ecode,
+		Msg:  code.GetMsg(ecode),
 		Data: map[string]int64{
 			"RowsAffected": num,
 		},
@@ -128,6 +186,7 @@ func UserDeleteByID(c *gin.Context) {
 // @Summary 更新用户
 // @Tags user
 // @Accept  json
+// @Security ApiKeyAuth
 // @Param id path int true "user id"
 // @Param body body models.UserForUpdate ture "user for update"
 // @Success 200 {object} controllers.Response
@@ -136,8 +195,8 @@ func UserUpdate(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
 		c.JSON(http.StatusOK, Response{
-			Code: InvalidParams,
-			Msg:  GetMsg(InvalidParams) + err.Error(),
+			Code: code.InvalidParams,
+			Msg:  code.GetMsg(code.InvalidParams) + err.Error(),
 			Data: nil,
 		})
 		return
@@ -146,24 +205,24 @@ func UserUpdate(c *gin.Context) {
 	err = c.ShouldBindJSON(&user)
 	if err != nil {
 		c.JSON(http.StatusOK, Response{
-			Code: InvalidParams,
-			Msg:  GetMsg(InvalidParams) + err.Error(),
+			Code: code.InvalidParams,
+			Msg:  code.GetMsg(code.InvalidParams) + err.Error(),
 			Data: nil,
 		})
 		return
 	}
-	num, err := models.UserUpdate(id, &user)
+	ecode, num, err := models.UserUpdate(id, &user)
 	if err != nil {
 		c.JSON(http.StatusOK, Response{
-			Code: Error,
-			Msg:  GetMsg(Error) + err.Error(),
+			Code: ecode,
+			Msg:  code.GetMsg(ecode) + err.Error(),
 			Data: nil,
 		})
 		return
 	}
 	c.JSON(http.StatusOK, Response{
-		Code: Success,
-		Msg:  GetMsg(Success),
+		Code: ecode,
+		Msg:  code.GetMsg(ecode),
 		Data: map[string]int64{
 			"RowsAffected": num,
 		},
@@ -175,6 +234,7 @@ func UserUpdate(c *gin.Context) {
 // @Summary 添加用户
 // @Tags user
 // @Accept  json
+// @Security ApiKeyAuth
 // @Param body body models.UserForAdd ture "user for add"
 // @Success 200 {object} controllers.Response
 // @Router /user [post]
@@ -183,27 +243,25 @@ func UserAdd(c *gin.Context) {
 	err := c.ShouldBindJSON(&user)
 	if err != nil {
 		c.JSON(http.StatusOK, Response{
-			Code: InvalidParams,
-			Msg:  GetMsg(InvalidParams) + err.Error(),
+			Code: code.InvalidParams,
+			Msg:  code.GetMsg(code.InvalidParams) + err.Error(),
 			Data: nil,
 		})
 		return
 	}
-	id, err := models.UserAdd(&user)
+	ecode, data, err := models.UserAdd(&user)
 	if err != nil {
 		c.JSON(http.StatusOK, Response{
-			Code: Error,
-			Msg:  GetMsg(Error) + err.Error(),
+			Code: ecode,
+			Msg:  code.GetMsg(ecode) + err.Error(),
 			Data: nil,
 		})
 		return
 	}
 	c.JSON(http.StatusOK, Response{
-		Code: Success,
-		Msg:  GetMsg(Success),
-		Data: map[string]int64{
-			"id": id,
-		},
+		Code: ecode,
+		Msg:  code.GetMsg(ecode),
+		Data: data,
 	})
 
 }
