# routers/router.go
@@ -2,6 +2,7 @@ package routers
 
 import (
 	"eme/controllers"
+	"eme/middleware/auth"
 	"eme/pkg/config"
 
 	// docs is generated by Swag CLI, you have to import it.
@@ -23,11 +24,14 @@ func InitRouter() *gin.Engine {
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	apiv1 := r.Group("/v1")
+	apiv1.POST("/user/login", controllers.UserLogin)
+	apiv1.Use(auth.Auth())
 	{
 		apiv1.GET("/user", controllers.UserGet)
 		apiv1.GET("/user/:id", controllers.UserGetByID)
 		apiv1.DELETE("/user/:id", controllers.UserDeleteByID)
 		apiv1.PUT("/user/:id", controllers.UserUpdate)
+		apiv1.POST("/user/logout", controllers.UserLogout)
 		apiv1.POST("/user", controllers.UserAdd)
 
 		apiv1.GET("/role", controllers.RoleGet)
